# devtools

./: .flatpackredact  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
devtools/: __init__.py  flatpack.py  softserve.py
scripts/: release.sh
tests/: README_tests.md  test_collect_entries_integration.py  test_decide_redaction.py  test_dump_repo_e2e.py  test_edge_filenames.py  test_errors.py  test_git_errors.py  test_header_and_plan_output.py  test_large_repo_mocked.py  test_pathspec_matching.py  test_submodule_integration.py  test_symlinks.py  test_unreadable_file.py  test_utils_unit.py
